NealSr - moar docs for default models
